# Rover_2023_2024

./: .gitignore  README.md
.github/workflows/: build.yml  nav_dev.yml
config/: autobot_depth_view.rviz  autobot_laser_view.rviz  controllers.yaml  nav2_params.yaml  rtabmap_params.yaml
description/: camera.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  turtlebot3_waffle.sdf
launch/: joystick.launch.py  launch_sim.launch.py  online_async_launch.py  rsp.launch.py  sim.launch.py
software/: .gitignore  .test.py.swp  change_control.py  clear_error.py  collectTemp.bash  output.txt  panorama.bash  python_gstream_example.py  startCamsTest.sh  startCan.sh  startRover.sh  start_gripper.bash  start_ir.bash  start_tower.bash  stitch_images.py  test.py  test_bandwidth.bash  thermistor_read.py  zenoh_init.bash
software/bags/: bag_data.sh
software/environment/realsense_configs/: low_res.json
software/environment/rover/UDEV_rules/: 99-rover-cameras.rules
software/firmware/modbus_slave/: modbus.c
software/firmware/sam4s/bms/: bms.cproj
software/firmware/sam4s/chassis-pantilt/: chassis-pantilt.cproj
software/firmware/sam4s/mining/: mining.cproj
software/firmware/sam4s/mining/src/: main.c
software/firmware/sam4s/modbus_interface/: modbus_interface.cproj
software/firmware/sam4s/servo_library/: servo_library.cproj
software/firmware/sam4s/stepper_library/: stepper_library.cproj
software/firmware/sam4s/tower/: tower.cproj
software/firmware/sam4s/tower_pan_tilt/: tower_pan_tilt.cproj
software/firmware/teensy/: WiFi_GPS.ino
software/ros_packages/: nano.4922.save
software/ros_packages/comms_control/: package.xml  setup.cfg  setup.py
software/ros_packages/comms_control/comms_control/: RemoteWirelessControl.py  comms_monitor.cfg  comms_monitor.example.cfg  comms_monitor.py  scrape_ubiquiti.py.bak  ubiquiti_logging.py
software/ros_packages/comms_control/comms_control/ddsconfig/: halow_cyclonedds_gs.xml  halow_cyclonedds_rover.xml
software/ros_packages/groundstation_gps/: package.xml  setup.cfg  setup.py
software/ros_packages/joy_to_servo/: CMakeLists.txt  package.xml
software/ros_packages/joy_to_servo/src/: controller_switcher.cpp  joy_to_servo_node.cpp  manipulability.cpp
software/ros_packages/nav_autonomy/: package.xml  setup.cfg  setup.py
software/ros_packages/nav_autonomy/config/: depth_nav.rviz  joystick.yaml  map_display_cfg.rviz  nav2_params.yaml  rtab_params.yaml
software/ros_packages/nav_autonomy/launch/: joystick.launch.py  mapping_launch.py  nav.launch.py  nav_launch.py
software/ros_packages/nav_autonomy/nav_autonomy/: forward_twist_node.py
software/ros_packages/nav_autonomy_sim/config/: rgbd_nav2_params.yaml
software/ros_packages/nav_autonomy_sim/launch/: joystick.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  realsense_d400.launch.py  robot.launch.py  rsp.launch.py  sim.launch.py  sim_rgbd_demo.launch.py
software/ros_packages/odrive_ros2_control/src/: odrive_hardware_interface.cpp
software/ros_packages/pc_processing/: CMakeLists.txt  README.md  package.xml
software/ros_packages/pc_processing/config/: bartender.rviz  pc_processing.rviz
software/ros_packages/pc_processing/launch/: test.launch.py
software/ros_packages/pc_processing/src/: count_objects.cpp  pc_filter.cpp  plane_fit.cpp
software/ros_packages/pc_processing/srv/: ResetObjects.srv
software/ros_packages/rover2_camera/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_camera/launch/: camera_capture_launch.py
software/ros_packages/rover2_camera/rover2_camera/: camera_capture.py
software/ros_packages/rover2_control/: package.xml  setup.py
software/ros_packages/rover2_control/launch/: gripper_control_launch.py  odrive_drive_control_launch.py  rover2_control_launch.py
software/ros_packages/rover2_control/rover2_control/: .gripper_control.py.swp  .odrive_drive_ros2_control.yaml.swp  auton_controller.py  auton_typing.py  chassis_pan_tilt_control.py  drive_can_control.py  drive_control.xacro  drive_coordinator.py  drive_dummy.urdf  geographic_functions.py  gripper_control.py  iris_controller.py  joint_position_control.py  joy_to_drive.py  monitor_aruco.py  odrive_config.json  odrive_drive_control.py  odrive_drive_ros2_control.xacro  odrive_drive_ros2_control.yaml  tower_pan_tilt_control.py
software/ros_packages/rover2_control_interface/: CMakeLists.txt
software/ros_packages/rover2_control_interface/msg/: .TowerPanTiltControlMessage.msg.swp  CommsStatusMessage.msg
software/ros_packages/rover2_main/launch/: rover2_main_launch.py
software/ros_packages/rover2_odometry/: .setup.py.swp  setup.py
software/ros_packages/rover2_odometry/launch/: rover2_odometry_launch.py
software/ros_packages/rover2_odometry/rover2_odometry/: GPSNode.py  calibration_settings.txt  imu.py  odometry.py  odrive_can_info.py  scimech_sensors.py  simple_position.py
software/ros_packages/rover2_status/launch/: rover2_status_launch.py
software/ros_packages/rover2_status/rover2_status/: .led_node.py.swp  odrive_telemetry.py
software/ros_packages/rover_arm/: arm_controller_swap.sh
software/ros_packages/rover_arm/config/: chomp_interface_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  planner_configs.yaml  planner_plugins.yaml  ros2_controllers.yaml  rover_arm.srdf  rover_arm.urdf.xacro  rviz_config.rviz  sensors_3d.yaml  servo_config.yaml
software/ros_packages/rover_arm/launch/: arm.launch.py  demo.launch.py  gripper_cam_solo.launch.py  rover_arm.launch.py
software/ros_packages/rover_arm_control/: package.xml  setup.cfg  setup.py
software/ros_packages/rover_arm_control/launch/: pick_and_place.launch.py
software/ros_packages/rover_arm_control/rover_arm_control/: absolute_move.py  aruco_detector.py  gripper_control.py  pick_and_place.py  relative_move.py
software/ros_packages/rover_arm_control_interface/: CMakeLists.txt  package.xml
software/ros_packages/rover_urdf/: CMakeLists.txt  package.xml
worlds/: obstacles.world
(+13 files in other folders)
