<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>comms_control</name>
  <version>0.0.0</version>
  <description>Package for Rover Communications Control</description>
  <maintainer email="leahyo@oregonstate.edu">osian</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python-requests</exec_depend>
  <exec_depened version_lte="1.26.20">python-urllib3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
