<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_autonomy</name>
  <version>0.0.0</version>
  <description>Package for autonomous mapping and navigation</description>
  <maintainer email="jagelsky@oregonstate.edu">Nav Autonomy Capstone</maintainer>
  <license>TODO: License</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <depend>rtabmap_ros</depend>
  <depend>nav2_bringup</depend>
  <!-- <depend>robot_localization</depend> -->
  <depend>twist_mux</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
